--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>快速开发工具</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="lib/ligerUI/skins/Aqua/css/ligerui-all.css" type="text/css" />
+    <link href="../../lib/ligerUI/skins/Aqua/css/all.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/index.css" />
 
     <script type="text/javascript" src="lib/jquery/jquery-1.9.0.min.js"></script>
